<resources>
    <string name="app_name" translatable="false">InstaTools</string>
    <string name="guest">Guest</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="search">Search</string>
    <string name="switchAccount">Switch Account</string>
    <string name="signOut">Sign Out</string>
    <string name="download">Download</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unsave">Unsave</string>
    <string name="backgroundTasks">Background Tasks</string>
    <string name="unknownError">Sorry, an unknown error occurred: %s</string>
    <string name="unknownMyError">Sorry, an unknown error occurred!</string>
    <string name="loadFailed">Loading failed!</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>
    <string name="viewProfile">View Profile</string>
    <string name="viewHere">View Here</string>
    <string name="viewInInsta">View in Instagram</string>
    <string name="addToFav">Add to favourites</string>
    <string name="removeFav">Remove from favourites</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="openDmInInsta">Open Chat in Instagram</string>
    <string name="pageNotExist">This page doesn\'t exist!</string>
    <string name="sContinue">Continue</string>
    <string-array name="inaccurateTime">
        <item>%d months</item>
        <item>%d weeks</item>
        <item>%d days</item>
        <item>%d hours</item>
        <item>%d minutes</item>
        <item>%d seconds</item>
    </string-array>
    <string name="inaccurateTimeSep">,&#160;</string>
    <string name="downloadAll">Download all slides</string>
    <string name="downloadThis">Download only this slide</string>
    <string name="downloadAudio">Download Audio</string>
    <string name="muteSound">Play/Mute Sound</string>
    <string-array name="bytes" translatable="false">
        <item>%d B</item>
        <item>%d KB</item>
        <item>%d MB</item>
        <item>%d GB</item>
        <item>%d TB</item>
    </string-array>
    <string name="maximum">Maximum: %s</string>
    <string name="unlimited">Unlimited</string>
    <string name="addShortcut">Add shortcut</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="save">Save</string>
    <string name="tryAgain">Try Again</string>
    <string name="openFolder">Open in Folder</string>
    <string name="deleteItemSure">Are you sure you want to delete this item?</string>
    <string name="listExport">Export the list</string>
    <string name="listClear">Clear all</string>
    <string name="listClearSure">Are you sure you want to remove all the items?</string>
    <string name="importReadError">Unfortunately an error occurred while reading the file!</string>
    <string name="change">Change</string>
    <string name="addAccount">Add Account</string>
    <string name="enterWithoutAuth">Enter without Authentication</string>
    <string name="browseInTheWeb">Browse in the Web</string>
    <string name="guestSure">
        Unfortunately Instagram won\'t let you view people in its website so frequently without signing in.
        It\'ll force you sign in or sign up to do that.
        (You can check this fact by opening Instagram in your browser\'s \"Incognito\" mode.)
        So there\'s no guarantee that you won\'t need to log in soon after entering the Guest mode.
    </string>
    <string name="needAuthentication">
        Instagram doesn\'t let us in. You need to login to continue&#8230;
    </string>
    <string name="unfollowers">Unfollowers</string>
    <string name="saved">Saved</string>
    <string name="direct">@string/export</string>
    <string name="guestDesc">You\'re using this app in guest mode.\nSo you cannot use this feature!</string>
    <string name="signOutSure">Are you sure you want to sign out of your Instagram account?</string>
    <string name="mtSearch">Enter a profile name or link&#8230;</string>
    <string name="terminateBgTasks">
        Some tasks are running in the background. Are you sure you want to terminate them all?
    </string>
    <string name="alsoDeleteData">Also delete my user data and settings</string>
    <string name="toExit">Double tap to exit&#8230;</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollowPV">This account is private. Are you sure you want to unfollow them?</string>
    <string name="unfCouldNot">Could not unfollow this user!</string>
    <string name="unfEmpty">You have no unfollowers!</string>
    <string name="unfollowedAt">Unfollowed at %s</string>
    <string name="newUnfNtfChannel">New unfollowers</string>
    <string name="newUnfNtfChannelDesc">Some people just unfollowed you!</string>
    <string name="newUnfNtfText">%d new people have unfollowed you!</string>
    <string name="unfollowedSoMany">
        Unfortunately Instagram, in order to combat spam, won\'t allow you to unfollow
        a large number of people so frequently. Please try again about half an hour later&#8230;
    </string>
    <string name="unsaveOnly">Unsave Only</string>
    <string name="downloadOnly">Download Only</string>
    <string name="unsaveDownload">Unsave &amp; Download</string>
    <string name="svdEmpty">You have no saved posts!</string>
    <string name="reallyHasNoMore">
        You have had %d more posts saved; but they\'re apparently hidden in any way!
        (blocked, archived, private or&#8230;)
    </string>
    <string name="boxUntil">Until %s</string>
    <string name="exportHtml">Export to HTML</string>
    <string name="exportPdf">Export to PDF</string>
    <string name="exportTxt">Export to TXT</string>
    <string name="exportOptions">Export Options (%s)</string>
    <string name="export">Export</string>
    <string name="boxEmpty">You have no messages!</string>
    <string name="dmNotSeen">You Are Invisible!</string>
    <string name="dmNotSeenDesc">The messages you view in this app will NOT be marked as seen!</string>
    <string name="expOptImage">Include pictures</string>
    <string name="expOptVideo">Include videos</string>
    <string name="expOptVoice">Include voice messages</string>
    <string name="expOptLow">Low quality</string>
    <string name="expOptMed">Medium quality</string>
    <string name="expOptHig">High quality</string>
    <string name="expOptThm">Only a thumbnail (first frame)</string>
    <string name="unsupportedExportUriAuth">
        Sorry, but this kind of folder is not supported for this export type!
        Although you can export into this very folder in the other file types.
    </string>
    <string name="exportHtmlDesc">Caution: an HTML file can only be viewed properly using a PC or macOS!</string>
    <string name="exportPdfDesc">A PDF file cannot contain audio and video.</string>
    <string name="exportTxtDesc">A plain text file cannot contain any kind of media.</string>
    <string name="markAsSeen">Mark as seen</string>
    <string name="downloads">Downloads</string>
    <string name="dwShare">@string/download</string>
    <string name="pasteLink">Paste a link&#8230;</string>
    <string name="downloadsHelp1">
        1. Open Instagram,
        \n2. Choose a post or story,
        \n3. Share it into this app;
    </string>
    <string name="downloadsHelp2">so that it\'ll be downloaded immediately!</string>
    <string name="nonInstagramUrl">Sorry but this app downloads only Instagram content!</string>
    <string name="dtRetryAll">Retry all</string>
    <string name="dtPauseAll">Pause all</string>
    <string name="dtResumeAll">Resume all</string>
    <string name="dtExportLinks">Export links</string>
    <string name="dtImportLinks">Import links</string>
    <string name="dEmptyQueue">The download list is empty!</string>
    <string name="dGuestSure">
        You\'re in the guest mode and Instagram may not allow downloads without authentication!
        Are you sure you want to continue?
    </string>
    <string name="friends">Friends</string>
    <string name="friEmpty">You neither follow or are followed by anyone.</string>
    <string name="friFollows">follower</string>
    <string name="friFollowed">following</string>
    <string name="friPrivate">private</string>
    <string name="friBestie">close friend</string>
    <string name="friRestricted">restricted</string>
    <string name="friSep" translatable="false">,&#160;</string>
    <string name="favourites">Favourites</string>
    <string name="favouritesTb">Favourites (offline)</string>
    <string name="favEmpty">
        Open a profile in InstaTools and tap the \"heart\" icon at top right to add them into this list.
    </string>
    <string name="vwTitle">Profile Viewer</string>
    <string name="vwShare">View Profile</string>
    <string name="vwFollowers">Followers</string>
    <string name="vwFollowing">Following</string>
    <string name="vwFlwZero" translatable="false">0</string>
    <string name="vwPrivate">This account is private!</string>
    <string name="followAll">Follow All</string>
    <string name="followAllSure">
        Are you sure you want to follow all of these accounts?
        (They will be followed slowly and one by one so that Instagram won\'t get sensitive!)
    </string>
    <string name="alsoRequestPv">Also send request to the private accounts.</string>
    <string name="mfLimit">Limit their number to:</string>
    <string name="vwStoryReel">Main Stories</string>
    <string name="vwReelDesc">Contains %d items</string>
    <string name="vwNoReels">This profile has no stories!</string>
    <string name="vwNoTagged">This profile has no tagged posts!</string>
    <string name="massFollower">Mass Follower</string>
    <string name="mfGuide1">
        Instagram won\'t let you follow a large number of people so frequently.
        It may block your account or sign you out of your session.
    </string>
    <string name="mfGuide2">
        But using this tool, you can follow numerous people slowly and one by one,
        so that Instagram won\'t suspect it is a robot or a spammer.
    </string>
    <string name="mfGuide3">
        1. Open a profile in InstaTools,
        \n\n2. Tap on the number of their followers or following,
        \n\n3. Select \"Follow All\"&#8230;
    </string>
    <string name="mfSeekTitle">It\'ll take %1$s for %2$d items.\nDelay between each follow action:</string>
    <string name="mfExportSubject">Mass Follower Queue (%d items)</string>
    <string name="mfUnlockTimes">Unlock for %d times</string>
    <string name="mfDetectedSpam">
        Unfortunately Instagram has detected you as a spammer;
        please increase the delay time and try again later!
    </string>
    <string-array name="mfTroubleshoot">
        <item>Disable battery optimisation for this app</item>
        <item>Allow background data usage</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="gSettings">Global Settings</string>
    <string name="aSettings">Settings of This Account</string>
    <string name="stDlPath">Main download folder</string>
    <string name="stBranching">Divide downloaded files into branches</string>
    <string name="stAliasing">Assign specific folders for profiles</string>
    <string name="stAddAlias">Add new exception</string>
    <string name="stAliasingDesc">
        Any file downloaded from this profile will be saved into this folder.
    </string>
    <string name="stClearCache">Clear Cache</string>
    <string name="stUserData">User Data</string>
    <string name="stResetData">Reset all my user data</string>
    <string name="stResetSettings">Reset my settings</string>
    <string name="stAutoDeleteEmptyDirs">Automatically delete empty folders</string>
</resources>