<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mnDownloads"
        android:icon="@drawable/download"
        android:title="@string/downloads" />
    <item
        android:id="@+id/mnFavourites"
        android:icon="@drawable/favourite"
        android:title="@string/favourites" />
    <item
        android:id="@+id/mnMassFollower"
        android:icon="@drawable/add"
        android:title="@string/massFollower"
        android:visible="false" />
    <item
        android:id="@+id/mnGSettings"
        android:icon="@drawable/settings"
        android:title="@string/gSettings" />
    <item
        android:id="@+id/mnSettings"
        android:icon="@drawable/settings"
        android:title="@string/aSettings" />
    <item
        android:id="@+id/mnSwitchAccount"
        android:icon="@drawable/switch_account"
        android:title="@string/switchAccount" />
    <item
        android:id="@+id/mnSignOut"
        android:icon="@drawable/exit"
        android:title="@string/signOut" />
</menu>