<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/root"
    tools:context=".Settings"
    tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:title="@string/settings" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/adBanner"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="NotSibling,UnknownId">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/stMarginV"
            android:paddingBottom="@dimen/stMarginV">

            <LinearLayout style="@style/stItem">

                <TextView
                    style="@style/stItemName"
                    android:text="@string/stDlPath" />

                <TextView
                    android:id="@+id/stMainPath"
                    style="@style/stPath" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/stBranching"
                    style="@style/stSubItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/stBranching"
                    android:textColor="?attr/colorAccent" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/stAutoDeleteEmptyDirs"
                    style="@style/stSubItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/stAutoDeleteEmptyDirs"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>

            <View style="@style/stSep" />

            <LinearLayout style="@style/stItem">

                <TextView
                    style="@style/stItemName"
                    android:text="@string/stAliasing" />

                <ir.mahdiparastesh.instatools.view.FlatListView
                    android:id="@+id/stAliases"
                    style="@style/stSubItem"
                    android:nestedScrollingEnabled="false"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp" />

                <TextView
                    android:id="@+id/stAddAlias"
                    style="@style/stButton"
                    android:text="@string/stAddAlias" />
            </LinearLayout>

            <View style="@style/stSep" />

            <LinearLayout
                android:id="@+id/stCache"
                style="@style/stItem">

                <TextView
                    android:id="@+id/stCaching"
                    style="@style/stItemName" />

                <SeekBar
                    android:id="@+id/stCacheLimit"
                    style="@style/stSubItem"
                    android:max="@integer/stCacheMaxNominal" />

                <TextView
                    android:id="@+id/stCacheLimitTv"
                    style="@style/stSubItem"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/stClearCache"
                    style="@style/stButton"
                    android:text="@string/stClearCache" />
            </LinearLayout>

            <View
                android:id="@+id/stSepCache"
                style="@style/stSep" />

            <LinearLayout style="@style/stItem">

                <TextView
                    style="@style/stItemName"
                    android:text="@string/stUserData" />

                <TextView
                    android:id="@+id/stResetData"
                    style="@style/stButton"
                    android:text="@string/stResetData" />

                <TextView
                    android:id="@+id/stResetSettings"
                    style="@style/stButton"
                    android:text="@string/stResetSettings" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/tbShadow"
        style="@style/tbShadow" />
</androidx.constraintlayout.widget.ConstraintLayout>