<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/root"
    tools:context=".MassFollower"
    tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:title="@string/massFollower" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/mfPadV"
        android:paddingTop="15dp"
        android:paddingRight="@dimen/mfPadV"
        android:paddingBottom="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/panel"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/panelShadow"
        style="@style/shadow"
        android:layout_height="1.5dp"
        android:alpha="0.4"
        android:rotationX="180"
        app:layout_constraintBottom_toTopOf="@id/panel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/mfPadV"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/mfPadV"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/seekTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/mfSeekTitle"
            android:textColor="?attr/colorAccent"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/seek"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:max="@integer/mfMaxNominal"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/seekIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="?attr/colorAccent"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/guide"
        style="@style/tip"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guideTv1"
                style="@style/mfGuideTv"
                android:layout_marginTop="0sp"
                android:text="@string/mfGuide1" />

            <TextView
                android:id="@+id/guideTv2"
                style="@style/mfGuideTv"
                android:text="@string/mfGuide2" />

            <TextView
                android:id="@+id/guideTv3"
                style="@style/mfGuideTv"
                android:justificationMode="none"
                android:lineSpacingMultiplier="1.0"
                android:text="@string/mfGuide3"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/tbShadow"
        style="@style/tbShadow" />
</androidx.constraintlayout.widget.ConstraintLayout>